--- a/scripts/171_abx_sweets_interaction.Rmd
+++ b/scripts/171_abx_sweets_interaction.Rmd
@@ -31,34 +31,6 @@ axis_title_size <- 10
 CLR works with counts, not relab. And also need to add a pseudocount
 
 ```{r}
-meta <- read_csv('../data/153_combined_META.csv')
-library(vdbR)
-connect_database()
-get_table_from_database('asv_annotation_blast_ag')
-cts <- get_counts_subset(meta$sampleid)
-cts_ <- cts %>% 
-  select(asv_key, sampleid, count)
-annot <- asv_annotation_blast_ag %>% 
-  filter(asv_key %in% cts_$asv_key)
-cts_all <- cts_ %>% 
-  left_join(annot %>%  select(asv_key, genus), by  = 'asv_key') %>% 
-  group_by(sampleid, genus) %>% 
-  summarise(cnt = sum(count)) %>% 
-  spread('sampleid', 'cnt', fill = 0) %>% 
-  filter(!is.na(genus)) %>% 
-  column_to_rownames('genus')
-```
-
-
-```{r}
-clr_res <- clr(cts_all + 0.5) %>% 
-  as.data.frame()  %>% 
-  rownames_to_column('genus') %>% 
-  gather('sampleid','clr', names(.)[2]:names(.)[ncol(.)])
-
-```
-
-```{r}
 meta <- read_csv('../data/153_combined_META.csv') %>% 
   mutate(timebin = cut_width(sdrt, 7, boundary=0, closed = 'left')) %>% 
   mutate(intensity = factor(intensity, levels = c('nonablative','reduced','ablative'))) %>% 
@@ -84,23 +56,84 @@ meta <- read_csv('../data/153_combined_META.csv') %>%
                 fg_sweets_e=fg_sweets*abx,
                 fg_legume_e=fg_legume*abx,
                 fg_veggie_e = fg_veggie*abx)
+```
 
-clr_few <- clr_res %>% 
+
+```{r}
+library(vdbR)
+connect_database('~/dbConfig.txt')
+get_table_from_database('asv_annotation_blast_ag')
+cts <- get_counts_subset(meta$sampleid)
+cts_ <- cts %>% 
+  select(asv_key, sampleid, count)
+```
+
+
+
+```{r}
+library(tidyverse)
+library(ggpubr)
+library(vdbR)
+connect_database()
+list_table_from_database('asv')
+get_table_from_database('asv_annotation_blast_detailed_ag')
+
+meta <- read_csv('../data/153_combined_META.csv')
+details <- get_counts_subset(meta$sampleid)
+
+detailsall <- details %>% 
+  inner_join(asv_annotation_blast_detailed_ag %>% select(asv_key : pident_97)) %>% 
+  distinct(asv_key, pident)
+
+detailsall %>% count(pident > 97) %>% 
+  mutate(perc = round(n/sum(n)*100,2))
+
+# the asv that has pident > 97
+# for genus!
+asv_97 <- detailsall %>% 
+  filter(pident > 97)
+
+asv_97 %>% write_csv('../data/171_asv_with_pident_gt_97.csv')
+```
+
+```{r}
+# only count the asvs that have pident > 97
+quality_asv <- read_csv('../data/171_asv_with_pident_gt_97.csv') %>% 
+  pull(asv_key)
+
+annot <- asv_annotation_blast_ag %>% 
+  select(asv_key, genus) %>% 
+  mutate(genus = if_else(asv_key %in% quality_asv, genus, NA))
+  
+
+  
+cts_all <- cts_ %>% 
+  left_join(annot %>%  select(asv_key, genus), by  = 'asv_key') %>% 
+  group_by(sampleid, genus) %>% 
+  summarise(cnt = sum(count)) %>% 
+  spread('sampleid', 'cnt', fill = 0) %>% 
+  filter(!is.na(genus)) %>% 
+  column_to_rownames('genus')
+
+clr_res <- clr(cts_all + 0.5) %>% 
+  as.data.frame()  %>% 
+  rownames_to_column('genus') %>% 
+  gather('sampleid','clr', names(.)[2]:names(.)[ncol(.)])
+
+clr_res %>% write_csv('../data/171_genus_CLR_res.csv')
+
+clr_wide <- clr_res %>% 
   spread('genus','clr')
 
-# still use the log10 cuz that's what I have always been using this time
-gcts <- read_csv('../data/090_all_samples1009_meta_p2d_fg9_dietall_genera90_pid.csv') %>% 
-  select(sampleid, Enterococcus)
-
 extra_full <- meta %>% 
-  inner_join(clr_few)
+  inner_join(clr_wide)  
+```
 
-clr_entero <- clr_res %>% 
-  filter(genus %in% c('Enterococcus'))
-
-extra_entero <- meta %>% 
-  inner_join(clr_entero) %>% 
-  rename(Enterococcus = clr)
+```{r} 
+# 
+# # still use the log10 cuz that's what I have always been using this time
+# gcts <- read_csv('../data/090_all_samples1009_meta_p2d_fg9_dietall_genera90_pid.csv') %>% 
+#   select(sampleid, Enterococcus)
 ```
 
 
@@ -177,7 +210,7 @@ post_res %>%  write_csv('../data/171_entero_model_fg_post_interaction.csv')
 ```
 
 
-
+  
 
 ```{r}
 cts <- read_csv('../data/022_ALL173_stool_samples_genus_counts.csv') %>% 
@@ -185,7 +218,7 @@ cts <- read_csv('../data/022_ALL173_stool_samples_genus_counts.csv') %>%
 
 target_genera <-  cts %>% 
   group_by(genus) %>% 
-  count(relab > 0.0001) %>% 
+  count(relab > 0.002) %>% 
   rename(criteria = names(.)[2]) %>% 
   filter(criteria == 'TRUE') %>% 
   arrange(-n) %>% 
@@ -194,7 +227,7 @@ target_genera <-  cts %>%
   filter(perc > 10) %>% 
   pull(genus)
 ```
-
+# fg genera
 
 ```{r}
  
